fix: support content direction sensitive horizontal spacing, fixes #1050 (#1055)

--- a/components/fieldgroup/index.css
+++ b/components/fieldgroup/index.css
@@ -23,8 +23,8 @@ governing permissions and limitations under the License.
 }
 
 .spectrum-FieldGroup--horizontal {
-  .spectrum-FieldGroup-item + .spectrum-FieldGroup-item {
-    margin: 0 0 0 var(--spectrum-fieldgroup-margin);
+  .spectrum-FieldGroup-item:not(:last-child) {
+    margin-inline-end: var(--spectrum-fieldgroup-margin);
   }
 }
 
